[package]
name = "s-s-size"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-futures = { git = "https://github.com/embassy-rs/embassy.git", rev = "c580d4c" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", rev = "c580d4c", features = ["defmt"] }
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", rev = "c580d4c", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", rev = "c580d4c", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-nrf = { git = "https://github.com/embassy-rs/embassy.git", rev = "c580d4c", features = ["defmt", "nrf52840", "time-driver-rtc1", "gpiote", "unstable-pac", "time"] }
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy.git", rev = "c580d4c" }

embedded-io = { version = "0.6.0", features = ["defmt-03"]  }
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }

defmt = "0.3"
defmt-rtt = "0.4"

static_cell = { version = "2" }
cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
embedded-storage = "0.3.1"
embedded-storage-async = "0.4.1"
embedded-hal = { version = "1.0" }
embedded-hal-async = { version = "1.0" }
embedded-hal-bus = { version = "0.1", features = ["async"] }

sequential-storage = { path = "../sequential-storage", features = ["defmt-03"] }
# sequential-storage = { version = "1.0.0", features = ["defmt-03"] }

[profile.release]
lto = true
debug = true
opt-level = "z"
panic = "abort"
codegen-units = 1
incremental = false
